--- a/partner/Part/templates/becomeCreatorTemplates/template2.html
+++ b/partner/Part/templates/becomeCreatorTemplates/template2.html
@@ -19,7 +19,7 @@
                         <th class="uk-text-center">Статус</th>
                         <th class="uk-text-center">Отказаться/Завершить</th>
                         <th class="uk-text-center">Посмотреть пожелания</th>
-                        <th class="uk-text-center">Сообщения</th>
+                        <!-- <th class="uk-text-center">Сообщения</th> -->
                     </tr>
                 </thead>
                 <!-- товары в работе -->
@@ -73,9 +73,9 @@
                                 </div>
                             </div>
                         </td>
-                        <td class="uk-text-center">
+                        <!-- <td class="uk-text-center">
                             <a type="submit" class="uk-button uk-button-default" href="/chat/{{product.chat_id}}">Написать</a>
-                        </td>
+                        </td> -->
 
                     </tr>
                     {% endfor %}
@@ -135,9 +135,9 @@
                                 </div>
                             </div>
                         </td>
-                        <td class="uk-text-center">
+                        <!-- <td class="uk-text-center">
                             <a type="submit" class="uk-button uk-button-default" href="/chat/{{product.chat_id}}">Написать</a>
-                        </td>
+                        </td> -->
                     </tr>
                     {% endfor %}
                 </tbody>
