--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -87,8 +87,13 @@
         </ul>
         <ul class="uk-nav uk-nav-secondary uk-nav-left uk-margin-auto-vertical">
             <p style="margin: 0px"> Регион <b>Москва</b></p>
-            <a href="partners/" class="uk-button uk-button-text" style="text-transform: none; font-size: medium;">Стать
+            {% if user.is_partner %}
+            <a href="/partners/" class="uk-button uk-button-text" style="text-transform: none; font-size: 20px;">Вы уже
+                партнер</a>
+            {% else %}
+            <a href="/partners/" class="uk-button uk-button-text" style="text-transform: none; font-size: 20px;">Стать
                 партнером</a>
+            {% endif %}
         </ul>
     </div>
 </div>
