limited all photo loaders to only photo files

--- a/bizopt/BO/templates/becomeCreatorTemplates/template24.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template24.html
@@ -82,7 +82,7 @@
                 <div class="row mt-3 mb-3">
                     <div class="col-md-8">
                         <label class="labels">Загрузить фото</label>
-                        <input id="fileupload" class="form-control" name="profile_images" type="file">
+                        <input id="fileupload" class="form-control" name="profile_images" type="file" accept="image/*">
                     </div>
                 </div>
 
