--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -51,7 +51,7 @@
                         <br>
                         <div class="uk-flex uk-flex-middle uk-flex-left">
                             <div uk-form-custom class="uk-width-3-5 uk-margin-medium-right">
-                                <input name="logoImage" type="file" id="logoImage">
+                                <input name="logoImage" type="file" accept="image/*" id="logoImage">
                                 <button class="uk-button uk-width-1" type="button" tabindex="-1">Изменить
                                     фото</button>
                             </div>
@@ -68,7 +68,7 @@
                     <br>
                     <div class="uk-flex uk-flex-middle uk-flex-left">
                         <div uk-form-custom class="uk-width-2-5 uk-margin-medium-right">
-                            <input name="bgImage" type="file" id="bgImage">
+                            <input name="bgImage" type="file" accept="image/*" id="bgImage">
                             <button class="uk-button uk-width-1" type="button" tabindex="-1">Изменить
                                 фото</button>
                         </div>
