--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -145,7 +145,7 @@
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Загрузи изображение</span>
                         <div uk-form-custom>
-                            <input type="file" id="files1" accept="image/jpeg, image/png, image/jpg" name="product_photo1"> 
+                            <input type="file" accept="image/*" id="files1" accept="image/jpeg, image/png, image/jpg" name="product_photo1"> 
                             <span class="uk-link">Выбери одно</span>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Загрузи изображение</span>
                         <div uk-form-custom>
-                            <input type="file" id="files2" accept="image/jpeg, image/png, image/jpg" name="product_photo2"> 
+                            <input type="file" accept="image/*" id="files2" accept="image/jpeg, image/png, image/jpg" name="product_photo2"> 
                             <span class="uk-link">Выбери одно</span>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Загрузи изображение</span>
                         <div uk-form-custom>
-                            <input type="file" id="files3" accept="image/jpeg, image/png, image/jpg" name="product_photo3"> 
+                            <input type="file" accept="image/*" id="files3" accept="image/jpeg, image/png, image/jpg" name="product_photo3"> 
                             <span class="uk-link">Выбери одно</span>
                         </div>
                     </div>
