--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -70,7 +70,7 @@
                         </label>
                         <br>
                         <div uk-form-custom="target: true" class="uk-width-1-1">
-                            <input name="profile_photo" type="file" id="profile_photo">
+                            <input name="profile_photo" type="file" accept="image/*" id="profile_photo">
                             <input class="uk-input uk-form-width-medium uk-width-1-1" type="text"
                                 placeholder="Select file" disabled>
                         </div>
