--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -13,6 +13,8 @@
 <div class="uk-flex uk-flex-top uk-flex-center" style="margin: 0 auto;">
     <div class="uk-width-3-5" style="margin: 0 auto">
         <form id="regForm" method="POST" action="" enctype="multipart/form-data">
+            {% csrf_token %}
+
             <h1 class="mb-5">Создать товар</h1>
 
 
@@ -33,7 +35,7 @@
                 </div>
                 <div class="uk-flex uk-flex-top uk-flex-between uk-margin-medium-bottom">
                     <div class="uk-width-2-5 uk-flex-row">
-                        
+
                         <div class="uk-width-1 uk-margin-small-bottom">
                             <label> Срок получения товара <i
                                     uk-tooltip="Выберите, через сколько покупатель сможет получить свой товар после покупки"
@@ -46,14 +48,12 @@
                             {{ form8.category }}
                         </div>
                         <div class="uk-width-1 uk-margin-small-bottom">
-                            <label>Страна произваодетель <i
-                                    uk-tooltip="Выберите страну, в которой товар был изготовлен"
+                            <label>Страна произваодетель <i uk-tooltip="Выберите страну, в которой товар был изготовлен"
                                     uk-icon="question"></i></label>
                             {{ form8.country }}
                         </div>
                         <div class="uk-width-1 uk-margin-small-bottom">
-                            <label> Пол <i
-                                    uk-tooltip="Выберите подходящий пол для товара"
+                            <label> Пол <i uk-tooltip="Выберите подходящий пол для товара"
                                     uk-icon="question"></i></label>
                             {{ form8.sex }}
                         </div>
@@ -110,8 +110,10 @@
                             <th class="uk-width-auto">Название</th>
                             <th class="uk-width-auto">Размер</th>
                             <th class="uk-width-auto">Кол-во</th>
-                            <th class="uk-width-auto">Цена <i uk-tooltip="Эту цену будут видеть покупатели"uk-icon="question"></i></th>
-                            <th class="uk-width-auto uk-text-center">Итоговая стоимость <i uk-tooltip="Чистая прибль с учетом комиссии"uk-icon="question"></i></th>
+                            <th class="uk-width-auto">Цена <i uk-tooltip="Эту цену будут видеть покупатели"
+                                    uk-icon="question"></i></th>
+                            <th class="uk-width-auto uk-text-center">Итоговая стоимость <i
+                                    uk-tooltip="Чистая прибль с учетом комиссии" uk-icon="question"></i></th>
                         </tr>
                     </thead>
                     <tbody id="table">
@@ -124,19 +126,20 @@
 
                 <article class="uk-article">
 
-                    <h1 class="uk-article-title" ><a class="uk-link-reset" href="">Загрузите изображения товара</a></h1>
+                    <h1 class="uk-article-title"><a class="uk-link-reset" href="">Загрузите изображения товара</a></h1>
 
-                    <p class="uk-article-meta" style="width:80%">Загрузите товары в соответствии с описанием. В случае не соответсвия требованиям, картинка может быть удалена</p>
+                    <p class="uk-article-meta" style="width:80%">Загрузите товары в соответствии с описанием. В случае
+                        не соответсвия требованиям, картинка может быть удалена</p>
 
                     <br>
                     <br>
-                
+
                     <p class="uk-text-lead">Как выглядит товар спереди</p>
-                
+
                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-                
-                    
-                
+
+
+
                 </article>
 
                 <div class="uk-margin uk-card uk-card-default uk-card-body">
@@ -145,22 +148,23 @@
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Загрузи изображение</span>
                         <div uk-form-custom>
-                            <input type="file" accept="image/*" id="files1" accept="image/jpeg, image/png, image/jpg" name="product_photo1"> 
+                            <input type="file" accept="image/*" id="files1" accept="image/jpeg, image/png, image/jpg"
+                                name="product_photo1">
                             <span class="uk-link">Выбери одно</span>
                         </div>
                     </div>
-                    
+
                     <progress id="js-progressbar1" class="uk-progress" value="1" max="100" hidden></progress>
-                    
+
 
                     <div id="result1"></div>
 
                 </div>
 
                 <br>
-                    <br>
-                
-                    <p class="uk-text-lead">Как выглядит товар сзади</p>
+                <br>
+
+                <p class="uk-text-lead">Как выглядит товар сзади</p>
 
                 <div class="uk-margin uk-card uk-card-default uk-card-body">
 
@@ -168,22 +172,23 @@
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Загрузи изображение</span>
                         <div uk-form-custom>
-                            <input type="file" accept="image/*" id="files2" accept="image/jpeg, image/png, image/jpg" name="product_photo2"> 
+                            <input type="file" accept="image/*" id="files2" accept="image/jpeg, image/png, image/jpg"
+                                name="product_photo2">
                             <span class="uk-link">Выбери одно</span>
                         </div>
                     </div>
-                    
+
                     <progress id="js-progressbar2" class="uk-progress" value="2" max="100" hidden></progress>
-                    
+
 
                     <div id="result2"></div>
 
                 </div>
 
                 <br>
-                    <br>
-                
-                    <p class="uk-text-lead">Как выглядит шов товара</p>
+                <br>
+
+                <p class="uk-text-lead">Как выглядит шов товара</p>
 
                 <div class="uk-margin uk-card uk-card-default uk-card-body">
 
@@ -191,18 +196,23 @@
                         <span uk-icon="icon: cloud-upload"></span>
                         <span class="uk-text-middle">Загрузи изображение</span>
                         <div uk-form-custom>
-                            <input type="file" accept="image/*" id="files3" accept="image/jpeg, image/png, image/jpg" name="product_photo3"> 
+                            <input type="file" accept="image/*" id="files3" accept="image/jpeg, image/png, image/jpg"
+                                name="product_photo3">
                             <span class="uk-link">Выбери одно</span>
                         </div>
                     </div>
-                    
+
                     <progress id="js-progressbar3" class="uk-progress" value="3" max="100" hidden></progress>
-                    
+
 
                     <div id="result3"></div>
 
                 </div>
 
+            </div>
+
+            <div class="tab" style="display: none;">
+                <h1>please wait</h1>
             </div>
 
 
@@ -230,80 +240,77 @@
 </div>
 
 <script>
+    document.querySelector("#files1").addEventListener("change", (e) => {
+        if (window.File && window.FileReader && window.FileList && window.Blob) {
+            const files = e.target.files;
+            const output = document.querySelector("#result1");
+            output.innerHTML = "";
+            for (let i = 0; i < files.length; i++) {
+                if (!files[i].type.match("image")) continue;
+                const picReader = new FileReader();
+                picReader.addEventListener("load", function (event) {
+                    const picFile = event.target;
+                    const div = document.createElement("div");
+                    div.innerHTML =
+                        `<img class="thumbnail" src="${picFile.result}" title="${picFile.name}"/>`;
+                    output.appendChild(div);
+                });
+                picReader.readAsDataURL(files[i]);
+            }
+        } else {
+            alert("Your browser does not support File API");
+        }
+    });
 
-document.querySelector("#files1").addEventListener("change", (e) => { 
-  if (window.File && window.FileReader && window.FileList && window.Blob) { 
-    const files = e.target.files; 
-    const output = document.querySelector("#result1");
-    output.innerHTML = "";
-    for (let i = 0; i < files.length; i++) { 
-        if (!files[i].type.match("image")) continue; 
-        const picReader = new FileReader(); 
-        picReader.addEventListener("load", function (event) { 
-          const picFile = event.target;
-          const div = document.createElement("div");
-          div.innerHTML = `<img class="thumbnail" src="${picFile.result}" title="${picFile.name}"/>`;
-          output.appendChild(div);
-        });
-        picReader.readAsDataURL(files[i]); 
-    }
-  } else {
-    alert("Your browser does not support File API");
-  }
-});
+    document.querySelector("#files2").addEventListener("change", (e) => {
+        if (window.File && window.FileReader && window.FileList && window.Blob) {
+            const files = e.target.files;
+            const output = document.querySelector("#result2");
+            output.innerHTML = "";
+            for (let i = 0; i < files.length; i++) {
+                if (!files[i].type.match("image")) continue;
+                const picReader = new FileReader();
+                picReader.addEventListener("load", function (event) {
+                    const picFile = event.target;
+                    const div = document.createElement("div");
+                    div.innerHTML =
+                        `<img class="thumbnail" src="${picFile.result}" title="${picFile.name}"/>`;
+                    output.appendChild(div);
+                });
+                picReader.readAsDataURL(files[i]);
+            }
+        } else {
+            alert("Your browser does not support File API");
+        }
+    });
 
-document.querySelector("#files2").addEventListener("change", (e) => { 
-  if (window.File && window.FileReader && window.FileList && window.Blob) { 
-    const files = e.target.files; 
-    const output = document.querySelector("#result2");
-    output.innerHTML = "";
-    for (let i = 0; i < files.length; i++) { 
-        if (!files[i].type.match("image")) continue; 
-        const picReader = new FileReader(); 
-        picReader.addEventListener("load", function (event) { 
-          const picFile = event.target;
-          const div = document.createElement("div");
-          div.innerHTML = `<img class="thumbnail" src="${picFile.result}" title="${picFile.name}"/>`;
-          output.appendChild(div);
-        });
-        picReader.readAsDataURL(files[i]); 
-    }
-  } else {
-    alert("Your browser does not support File API");
-  }
-});
+    document.querySelector("#files3").addEventListener("change", (e) => {
+        if (window.File && window.FileReader && window.FileList && window.Blob) {
+            const files = e.target.files;
+            const output = document.querySelector("#result3");
+            output.innerHTML = "";
+            for (let i = 0; i < files.length; i++) {
+                if (!files[i].type.match("image")) continue;
+                const picReader = new FileReader();
+                picReader.addEventListener("load", function (event) {
+                    const picFile = event.target;
+                    const div = document.createElement("div");
+                    div.innerHTML =
+                        `<img class="thumbnail" src="${picFile.result}" title="${picFile.name}"/>`;
+                    output.appendChild(div);
+                });
+                picReader.readAsDataURL(files[i]);
+            }
+        } else {
+            alert("Your browser does not support File API");
+        }
+    });
 
-document.querySelector("#files3").addEventListener("change", (e) => { 
-  if (window.File && window.FileReader && window.FileList && window.Blob) { 
-    const files = e.target.files; 
-    const output = document.querySelector("#result3");
-    output.innerHTML = "";
-    for (let i = 0; i < files.length; i++) { 
-        if (!files[i].type.match("image")) continue; 
-        const picReader = new FileReader(); 
-        picReader.addEventListener("load", function (event) { 
-          const picFile = event.target;
-          const div = document.createElement("div");
-          div.innerHTML = `<img class="thumbnail" src="${picFile.result}" title="${picFile.name}"/>`;
-          output.appendChild(div);
-        });
-        picReader.readAsDataURL(files[i]); 
-    }
-  } else {
-    alert("Your browser does not support File API");
-  }
-});
 
-</script>
 
-<script>
-
-    
     var getEl = 'js-progressbar1';
     var inEl = '.js-upload1';
 
-    console.log(num);
-                
     var bar = document.getElementById(getEl);
 
     UIkit.upload(inEl, {
@@ -360,9 +367,6 @@ document.querySelector("#files3").addEventListener("change", (e) => {
         }
 
     });
-
-
-
 </script>
 
 <script>
@@ -371,6 +375,7 @@ document.querySelector("#files3").addEventListener("change", (e) => {
         currentTab = 0;
 
     function PassChecker(n) {
+        console.log("PassChecker = " + n)
         let product_name = document.getElementById("product_name").value.length;
         let brand = document.getElementById("brand").value.length;
         let description = document.getElementById("description").value.length;
@@ -382,44 +387,41 @@ document.querySelector("#files3").addEventListener("change", (e) => {
             btn.disabled = false;
             return 1
         } else if (n == 2) {
-            let poles = document.getElementsByClassName("price")
-            let checker = false
-            for (let i = 0; i < poles.length; i++) {
-                if (poles[i].value.length > 0) {
-                    checker = true
+            let prices = document.getElementsByClassName("price")
+            let amount = document.getElementsByClassName("price")
+            let checker1 = false
+            let checker2 = false
+            for (let i = 0; i < prices.length; i++) {
+                if (prices[i].value.length > 0) {
+                    checker1 = true
                 }
             }
-            if (checker) {
+            for (let i = 0; i < amount.length; i++) {
+                if (amount[i].value.length > 0) {
+                    checker2 = true
+                }
+            }
+            if (checker1 && checker2) {
                 btn.style["background-color"] = 'blue'
                 btn.disabled = false;
                 localStorage.page = 5;
-                
+
                 return 1
             } else {
                 btn.style["background-color"] = 'gray'
                 btn.disabled = true;
                 return 0
             }
-        }
-        else if (n == 3) {
+        } else if (n == 3) {
+            btn.style["background-color"] = 'blue'
+            localStorage.page = 5;
+            btn.disabled = false;
+            return 1
 
-            let poles = document.getElementsByClassName("price")
-            let checker = true
-
-            // ТУТ УСЛОВИЕ ЗАГРУЗКИ КАРТИНОК ---- checker = true
-
-            if (checker) {
-                btn.style["background-color"] = 'blue'
-                btn.disabled = false;
-                localStorage.page = 5;
-                btn.type = "submit"
-                return 1
-            } else {
-                btn.style["background-color"] = 'gray'
-                btn.disabled = true;
-                return 0
-            }
-
+        } else if (n == 4){
+            localStorage.page = 5;
+            btn.type = "submit"
+            return 1
         }
 
     }
@@ -443,7 +445,7 @@ document.querySelector("#files3").addEventListener("change", (e) => {
         for (let i = 0; i < sizes.length; i++) {
             let size = sizes[i].getElementsByClassName('complectations_size')[0].value
             table.innerHTML +=
-                `<tr> <td class="uk-text-truncate">${name}</td> <td class="uk-width-1-5">${size}</td> <td class="uk-width-1-5"><input class="uk-input amount" type="number" max="1000000" name="amount_${i}" required></td> <td class="uk-width-1-5"><input class="uk-input price" type="number" name="price_${i}" oninput="recalc(this)" required></td> <td class="uk-width-1-5 uk-text-center"><p class="final_price"></p></td> </tr>`;
+                `<tr> <td class="uk-text-truncate">${name}</td> <td class="uk-width-1-5">${size}</td> <td class="uk-width-1-5"><input class="uk-input amount" type="number" max="1000000" name="amount_${i}" oninput="PassChecker(2)" required></td> <td class="uk-width-1-5"><input class="uk-input price" type="number" name="price_${i}" oninput="recalc(this)" required></td> <td class="uk-width-1-5 uk-text-center"><p class="final_price"></p></td> </tr>`;
         }
     }
 
@@ -557,7 +559,12 @@ document.querySelector("#files3").addEventListener("change", (e) => {
                 addComplectation()
                 document.getElementById("prevBtn").style.display = "inline";
                 PassChecker(2)
+            } else if (n === 2) {
+                document.getElementById("nextBtn").style["background-color"] = 'gray'
+                document.getElementById("prevBtn").style.display = "inline";
+                PassChecker(3)
             } else if (n == x.length - 1) {
+                PassChecker(4)
                 document.getElementById("prevBtn").style.display = "none";
                 document.getElementById("nextBtn").style.display = "inline";
 
@@ -574,7 +581,7 @@ document.querySelector("#files3").addEventListener("change", (e) => {
     function nextPrev(n) {
         let x = document.getElementsByClassName("tab");
         let btn = document.getElementById("nextBtn");
-        if (n > 0 && currentTab < 2) {
+        if (n > 0 && currentTab < 3) {
             if (PassChecker(currentTab + 1)) {
                 x[currentTab].style.display = "none";
                 currentTab = currentTab + n;
@@ -591,8 +598,8 @@ document.querySelector("#files3").addEventListener("change", (e) => {
         } else {
             x[currentTab].style.display = "none";
             currentTab = currentTab + n;
-            if (currentTab === 3) {
-                document.getElementById('nextBtn').type = "submit"
+            if (currentTab === 4) {
+                PassChecker(4)
                 document.getElementById('next-previous').classList.add("redirect");
             }
             showTab(currentTab);
