--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style="margin: 0 auto;">
-    <div class="uk-margin-medium-top uk-flex uk-width-1@m uk-width-4-5" uk-filter="target: .js-filter"
+    <div class="uk-margin-medium-top uk-margin-xlarg uk-flex uk-width-1@m uk-width-4-5" uk-filter="target: .js-filter"
         style="margin: 0 auto; ">
         <div class="uk-width-1-5" style="height: 100%; font-size: 1.2em;">
             <div class="uk-margin-small-left">
@@ -96,7 +96,7 @@
             </ul>
         </div>
 
-        <ul class="js-filter uk-grid uk-grid-medium uk-width-4-5" uk-grid style="height: 100%; margin: auto;" uk-grid>
+        <ul class="js-filter uk-grid uk-grid-medium uk-width-4-5" uk-grid style="height: 100%; margin: auto; border-left: 1px solid" uk-grid>
 
             {% include "baseProductCard.html" %}
 
