add start page partner

--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -63,7 +63,6 @@
     }
     .textS {
 
-        text-transform: uppercase;
         font-family: Helvetica;
         font-size: 30px;
         color: #fff;
@@ -121,13 +120,16 @@
 
     <section>
 
-        <div class="uk-inline" style="height: 100vh; width: 100vw;">
+        <div class="uk-inline" style="height: 100vh; width: 100vw; background: #0a3644;" >
+            <!-- https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg -->
         
-            <img src="https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg " width="100%" height="100%" alt="">
+            <img src="https://i.ibb.co/qyHsWVq/bg-2-test-com.jpg" width="100%" height="100%" alt="">
 
-            <div class="uk-position-center"><p class="textM">BeFreela</p></div>
+            <div class="uk-position-bottom-center"><p class="textS">BeFreela Partners</p></div>
+            <div class="uk-position-top-center"><br><br><img src="../../../media/logoImage/logo.svg" alt="" style="padding-top: 15vh;"></div>
+            <div class="uk-position-top-center"><br><br><br><img src="../../../media/logoImage/logo_text.svg" alt=""></div>
 
-            <div class="uk-position-bottom-center"> <p class="textS">Маркетплейс российских брендов</p> </div>
+
         
         </div>
 
