--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -125,7 +125,7 @@
         
             <img src="https://i.ibb.co/qyHsWVq/bg-2-test-com.jpg" width="100%" height="100%" alt="">
 
-            <div class="uk-position-bottom-center"><p class="textS">BeFreela Partners</p></div>
+            <div class="uk-position-bottom-center"><button class="uk-button" style="background-color: #B54F00; color:#f2f2f2;">Заполнить заявку</button><br><br></div>
             <div class="uk-position-top-center"><br><br><img src="../../../media/logoImage/logo.svg" alt="" style="padding-top: 15vh;"></div>
             <div class="uk-position-top-center"><br><br><br><img src="../../../media/logoImage/logo_text.svg" alt=""></div>
 
@@ -138,7 +138,7 @@
     <section>
         <div class="uk-inline" style="height: 100vh; width: 100vw;" onclick="animationLetters();">
         
-            <div class="uk-position-center" id="secondDiv">
+            <div class="uk-position-top-center" id="secondDiv">
     
 
                 <h1 class="ml14">
@@ -151,6 +151,28 @@
 
             </div>
 
+
+
+                        <div class="uk-section uk-section-secondary uk-light" style="margin-top: 10vh;">
+                            <div class="uk-container">
+                        
+                                <h3>Section Secondary</h3>
+                        
+                                <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
+                                    <div>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                    <div>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                    <div>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                    </div>
+                                </div>
+                        
+                            </div>
+                        </div>
+
             
             <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         
@@ -161,7 +183,7 @@
 
 
     <section>
-        <div class="uk-inline" style="height: 100vh; width: 100vw;" onclick="animationLetters();">
+        <div class="uk-inline" style="height: 100vh; width: 100vw;">
     
 
     
