--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -272,7 +272,7 @@
         </div> -->
 
         <section>
-            <div class="uk-section " style="height: 100%; width: 100vw; ">
+            <div class="uk-section " style="height: 100%; ">
 
         <div id="collab" class=" uk-padding-large uk-light" style=" background-color: #0A3644;">
             <h1 class="uk-text-center">Условия Сотрудничества</h1>
