add images main page

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -36,34 +36,115 @@
     }
 </style>
 
-<div uk-slideshow="animation: push; ratio: 7:3; autoplay: true; pause-on-hover: true; min-height: 300; max-height: 500">
+<!-- <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+    uk-slider="clsActivated: uk-transition-active; center: true">
 
-    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+    <ul class="uk-slider-items uk-grid">
+        <li class="uk-width-3-4">
+            <div class="uk-panel">
+                <img src="../../../media/media/baner1.png" width="1800" height="1200" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+                    <h3 class="uk-margin-remove">Bottom</h3>
+                    <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </li>
+        <li class="uk-width-3-4">
+            <div class="uk-panel">
+                <img src="../../../media/media/baner2.png" width="1800" height="1200" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+                    <h3 class="uk-margin-remove">Bottom</h3>
+                    <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </li>
+        <li class="uk-width-3-4">
+            <div class="uk-panel">
+                <img src="../../../media/media/baner1.png" width="1800" height="1200" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+                    <h3 class="uk-margin-remove">Bottom</h3>
+                    <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </li>
+        <li class="uk-width-3-4">
+            <div class="uk-panel">
+                <img src="../../../media/media/baner1.png" width="1800" height="1200" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+                    <h3 class="uk-margin-remove">Bottom</h3>
+                    <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </li>
+        <li class="uk-width-3-4">
+            <div class="uk-panel">
+                <img src="../../../media/media/baner1.png" width="1800" height="1200" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+                    <h3 class="uk-margin-remove">Bottom</h3>
+                    <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </li>
+    </ul>
 
-        <ul class="uk-slideshow-items">
-            <li>
-                <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp"
-                    alt="" uk-cover>
-            </li>
-            <li>
-                <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp"
-                    alt="" uk-cover>
-            </li>
-            <li>
-                <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp"
-                    alt="" uk-cover>
-            </li>
-        </ul>
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+        uk-slider-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+        uk-slider-item="next"></a>
 
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
-            uk-slideshow-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
-            uk-slideshow-item="next"></a>
+</div> -->
+
+<!-- <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="ratio: 7:3; animation: push">
+
+    <ul class="uk-slideshow-items">
+        <li>
+            <img src="../../../media/media/baner1.png" alt="" uk-cover>
+        </li>
+        <li>
+            <img src="../../../media/media/baner1.png" alt="" uk-cover>
+        </li>
+        <li>
+            <img src="../../../media/media/baner1.png" alt="" uk-cover>
+        </li>
+    </ul>
+
+    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+        uk-slideshow-item="previous"></a>
+    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+        uk-slideshow-item="next"></a>
+
+</div> -->
+<div style="margin:auto; width: 80%">
+
+    <div uk-slideshow="animation: push; ratio: 7:3; autoplay: true; pause-on-hover: true; min-height: 300; max-height: 500">
+
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+
+            <ul class="uk-slideshow-items">
+                <li>
+                    <img src="../../../media/media/main_baner3.png"
+                        alt="" uk-cover>
+                        
+                </li>
+                <li>
+                    <img src="../../../media/media/main_baner2.png"
+                        alt="" uk-cover>
+                </li>
+                <li>
+                    <img src="../../../media/media/main_baner1.png"
+                        alt="" uk-cover>
+                </li>
+            </ul>
+
+            <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+                uk-slideshow-item="previous"></a>
+            <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+                uk-slideshow-item="next"></a>
+
+        </div>
 
     </div>
-
 </div>
-
 
 
 
