--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -329,6 +329,8 @@
 
                 <p style="margin: auto;">
                     Мы рассмотрим каждое предложение и ответим вам в течение 2 дней.
+
+                    Давайте работать вместе
                 </p>
             </div>
         </div>
